--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -9,9 +9,15 @@ bind C-Space send-prefix
 # WSL escape characters on startup bug: https://github.com/tmux-plugins/tmux-sensible/issues/61
 set -sg escape-time 10
 
-# Shift Alt vim kets to switch windows
+# Shift Alt vim keys to switch windows
 bind -n M-H previous-window
 bind -n M-L next-window
+
+# Ctrl Vim keys to switch
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
 
 # Enable Mouse Support
 set -g mouse on
