Tmux: Add history scrollback limit

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,4 +1,4 @@
-# Tmux colors
+# Tmux colors: https://github.com/tmux/tmux/wiki/FAQ#how-do-i-use-rgb-colour
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 # Set prefix key
@@ -28,7 +28,7 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-# Setting vi-mode (for text selectioon)
+# Setting vi-mode (for text selection)
 set-window-option -g mode-keys vi
 # keybinds
 bind-key -T copy-mode-vi v send-keys -X begin-selection
@@ -38,3 +38,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 # Set CWD when pane splitting
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+# Scroll back
+set -g history-limit 20000
+
