--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -42,10 +42,14 @@ bind % split-window -h -c "#{pane_current_path}"
 # Scroll back
 set -g history-limit 20000
 
-# Colors
+# Colors / Status Line
 set -g status-bg '#181616'  # Set the background color of the status bar
 set -g status-fg '#c8c093'  # Set the foreground color (text color) of the status barA
 
 set-window-option -g window-status-current-style 'bg=#98bb6c,fg=#0c0c0c'
 set-window-option -g window-status-current-format " #I: #W "
 
+set -g status-right-length 120
+set -g status-right " #{session_name} | #h | %H:%M %d-%b%y"
+set -g status-left ""
+set -g status-interval 60
