Add pane resizing keyinds

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -19,6 +19,12 @@ bind -n C-j select-pane -D
 bind -n C-k select-pane -U
 bind -n C-l select-pane -R
 
+# Resize panes with Alt + Arrow keys
+bind -n M-Up    resize-pane -U 5 # Resize up
+bind -n M-Down  resize-pane -D 5 # Resize down
+bind -n M-Left  resize-pane -L 5 # Resize left
+bind -n M-Right resize-pane -R 5 # Resize right
+
 # Enable Mouse Support
 set -g mouse on
 
@@ -30,6 +36,7 @@ set-option -g renumber-windows on
 
 # Setting vi-mode (for text selection)
 set-window-option -g mode-keys vi
+
 # keybinds
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-r send-keys -X rectangle-toggle
