--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -50,8 +50,8 @@ bind % split-window -h -c "#{pane_current_path}"
 set -g history-limit 20000
 
 # Colors / Status Line
-set -g status-bg '#181616'  # Set the background color of the status bar
-set -g status-fg '#c8c093'  # Set the foreground color (text color) of the status barA
+set -g status-bg '#292c3c'  # Set the background color of the status bar
+set -g status-fg '#c6d0f5'  # Set the foreground color (text color) of the status barA
 
 set-window-option -g window-status-current-style 'bg=#98bb6c,fg=#0c0c0c'
 set-window-option -g window-status-current-format " #I: #W "
