--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -13,11 +13,11 @@ set -sg escape-time 10
 bind -n M-H previous-window
 bind -n M-L next-window
 
-# Ctrl Vim keys to switch
-bind -n C-h select-pane -L
-bind -n C-j select-pane -D
-bind -n C-k select-pane -U
-bind -n C-l select-pane -R
+# <prefix>+<Vim keys> to switch panes
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # Resize panes with Alt + Arrow keys
 bind -n M-Up    resize-pane -U 5 # Resize up
@@ -39,7 +39,7 @@ set-window-option -g mode-keys vi
 
 # keybinds
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi C-r send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi C-q send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # Set CWD when pane splitting
@@ -50,13 +50,19 @@ bind % split-window -h -c "#{pane_current_path}"
 set -g history-limit 20000
 
 # Colors / Status Line
-set -g status-bg '#292c3c'  # Set the background color of the status bar
-set -g status-fg '#c6d0f5'  # Set the foreground color (text color) of the status barA
+# https://github.com/catppuccin/tmux/blob/main/README.md#for-tmux-versions-prior-to-32
+set -g @ctp_bg "#24273a"
+set -g @ctp_fg "#cad3f5"
+set -g @ctp_surface_1 "#494d64"
+set -g @ctp_mauve "#c6a0f6"
+set -g @ctp_crust "#181926"
 
-set-window-option -g window-status-current-style 'bg=#98bb6c,fg=#0c0c0c'
-set-window-option -g window-status-current-format " #I: #W "
+set -gF status-style "bg=#{@ctp_bg},fg=#{@ctp_fg}"
+
+set -gF window-status-format "#[bg=#{@ctp_surface_1},fg=#{@ctp_fg}] ##{window_index} ##{window_name} "
+set -gF window-status-current-format "#[bg=#{@ctp_mauve},fg=#{@ctp_crust}] ##{window_index} ##{window_name} "
 
 set -g status-right-length 120
-set -g status-right " #{session_name} | #h | %H:%M %d-%b%y"
+set -g status-right " #{session_name} | #h | %H:%M %d-%b-%Y"
 set -g status-left ""
 set -g status-interval 60
