feat(tmux): Add fuzzy finding for tmux sessions

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,6 +6,10 @@ unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
+# FZF Searching tmux sessions
+unbind s
+bind s popup -E "~/.config/tmux/scripts/tmux-sessions.sh"
+
 # WSL escape characters on startup bug: https://github.com/tmux-plugins/tmux-sensible/issues/61
 set -sg escape-time 10
 
